--- a/table2.html
+++ b/table2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Maatic IT Assignment</title>
+	<title>Maatic IT Day2 Assignment</title>
 </head>
 <body>
 	<table align="center" width="50%" border="1" cellpadding="0" cellspacing="2px" style="text-align: center; margin-top: 10%">
